--- a/src/styles/PropertyCard.css
+++ b/src/styles/PropertyCard.css
@@ -28,3 +28,17 @@
   color: inherit;
   display: block;
 }
+
+.fav-btn {
+  background: none;
+  border: none;
+  font-size: 22px;
+  cursor: pointer;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+.fav-btn.active {
+  color: red;
+}
