--- a/src/styles/PropertyCard.css
+++ b/src/styles/PropertyCard.css
@@ -21,7 +21,8 @@
 /* Images */
 .image-wrapper img {
   width: 100%;
-  height: 180px;
+  height: auto;
+  display: block;
   object-fit: cover;
 }
 
@@ -64,4 +65,14 @@
 .fav-btn.active {
   color: #c40909;
   cursor: default;
+}
+
+@media (max-width: 768px) {
+  .property-card {
+    width: 100%;
+  }
+
+  .image-wrapper img {
+    height: auto;
+  }
 }
